--- a/Backend/ContactList.WebApi/appsettings.json
+++ b/Backend/ContactList.WebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=contactlist.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
